# Global-Teleoperation-6DoF

./: .gitignore  README.md  ctx.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
config/: system.yaml
config/arms/: mock.yaml  piper.yaml  so100.yaml
docker/: Dockerfile.follower  Dockerfile.signaling  entrypoint-follower.sh
ros2_ws/src/robots/piper/: package.xml  setup.py
ros2_ws/src/robots/piper/launch/: start_both_arms_single_can.launch.py  start_single_piper.launch.py  start_two_piper.launch.py
ros2_ws/src/robots/piper/piper/: piper_ctrl_single_node.py
ros2_ws/src/robots/so101_ros2/: package.xml  setup.py
ros2_ws/src/robots/so101_ros2/launch/: so101_publisher_with_conversion_launch.py  so101_subscriber_with_conversion_launch.py
ros2_ws/src/robots/so101_ros2/so101_ros2/: so101_ros2_pub_with_conversion.py  so101_ros2_sub_with_conversion.py
ros2_ws/src/robots/so101_ros2/so101_ros2/lerobot/: __init__.py  device_base.py  so101.py
ros2_ws/src/robots/so101_ros2/so101_ros2/lerobot/.cache/: so101_follower.json  so101_leader.json
ros2_ws/src/teleop_bridge/: package.xml  setup.py
ros2_ws/src/teleop_bridge/launch/: teleop_bridge.launch.py
ros2_ws/src/teleop_bridge/teleop_bridge/: camera_bridge.py  camera_publisher.py  follower_bridge.py  leader_bridge.py
scripts/: run_demo.py  run_follower.py  run_leader.py  run_piper.sh
src/teleop/: __init__.py
src/teleop/agent/: __init__.py  prompt.py  supervisor.py
src/teleop/cloud/: __init__.py  session_registry.py  signaling_server.py  telemetry_relay.py
src/teleop/core/: __init__.py  config.py  types.py
src/teleop/drivers/: __init__.py  base.py  registry.py  ros2_driver.py
src/teleop/follower/: __init__.py  controller.py  safety.py
src/teleop/hardware/: __init__.py  so101_arm.py
src/teleop/leader/: __init__.py  teleop_node.py
src/teleop/network/: __init__.py  monitor.py
src/teleop/recording/: __init__.py  recorder.py
src/teleop/sim/: __init__.py  mock_arm.py
src/teleop/transport/: __init__.py  base.py  inproc.py  ws_transport.py  zenoh_transport.py
src/teleop/video/: __init__.py  camera.py  publisher.py  run_publisher.py  ws_publisher.py
tests/: test_arm_profiles.py  test_safety.py  test_session_registry.py  test_supervisor.py
ui/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/lib/: signaling.ts  webrtc.ts  wsvideo.ts
