[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "global-teleop-6dof"
version = "0.1.0"
description = "Global leader-follower teleoperation platform for a 6DOF robotic arm"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# The core slice runs with zero third-party deps. Extras enable production paths.
yaml = ["pyyaml>=6.0"]
zenoh = ["eclipse-zenoh>=0.11.0"]
data = ["pandas>=2.0", "pyarrow>=14.0", "h5py>=3.9"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12.0"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.scripts]
teleop-demo = "scripts.run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
