<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_bridge</name>
  <version>0.1.0</version>
  <description>
    Bridges ROS2 leader/follower topics to the global teleoperation transport
    (Zenoh) so a leader and follower on different networks interoperate over the
    public internet. Wraps the dependency-free `teleop` core package.
  </description>
  <maintainer email="vatbhadaurya@gmail.com">teleop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
