<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="msfshrdc@todo.todo">msfshrdc</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- Feetech STS3215 hardware deps (pip): scservo_sdk, pynput, numpy.
       Install with: pip install scservo_sdk pynput numpy -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
